[FIX] Requests failing issue
In some case requests were failing for, at least, these two issues :
- The Odoo response was too big for the sendMessage WebExt function.
-> No response was received in this case and we were stuck in "executing query" loop. To fix this, I just get rid of the content script usage and the rpc service. I know use the JSON RPC API. We don't have the length issue anymore but we'll have to support the new system in the future since JSON RPC will be deprecated in v19.1+

- Some fields were impossible to decode from Odoo side (e.g. `raw` on `ir.attachment`) so I've introduced some exclusions logic. Atm I've found 2 fields (1 in `ir.attachment` and 1 in `account.move`).
The logic is:
If we don't specify field in our request :
- If the model hasn't excluded field : proceed
- If it has : append every model's fields (except the excluded ones ofc) before the request
If we specify field(s) in our request :
- Only excluded field(s) : just request the "id" field by default
- Multiple fields : remove the excluded ones

--- a/src/components/devtools/selects/selects.styles.scss
+++ b/src/components/devtools/selects/selects.styles.scss
@@ -19,6 +19,9 @@
     gap: 6px;
 
     .field-name {
+        display: flex;
+        align-items: center;
+        gap: 6px;
         font-weight: 500;
         user-select: none;
     }
@@ -35,6 +38,14 @@
 
         &:hover {
             opacity: 0.7;
+        }
+    }
+
+    &.excluded {
+        background-color: #e67e22;
+
+        .excluded-indicator {
+            animation: pulse 2s infinite;
         }
     }
 }
@@ -193,5 +204,19 @@
 
     svg {
         animation: spin 2s linear infinite;
+    }
+}
+
+@keyframes pulse {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0.5;
+    }
+
+    100% {
+        opacity: 1;
     }
 }
